rest-villains/src/main/kubernetes/kubernetes.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-villains
  namespace: superheroes
spec:
  ingressClassName: nginx
  rules:
    - host: superheroes.com
      http:
        paths:
          - backend:
              service:
                name: rest-villains
                port:
                  number: 80
            path: /api/villains
            pathType: Prefix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: villains-database
  namespace: superheroes
spec:
  replicas: 1
  selector:
    matchLabels:
      name: villains-database
  template:
    metadata:
      labels:
        name: villains-database
    spec:
      containers:
        - name: villains-database
          image: centos/postgresql-96-centos7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              protocol: TCP
              name: http
---
apiVersion: v1
kind: Service
metadata:
  namespace: superheroes
  name: villains-database
spec:
  ports:
    - name: http
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    name: villains-database
  type: ClusterIP
